<resources>
    <string name="app_name">Digital House Foods</string>

    <!-- ACTION BAR NAMES -->
    <string name="register_activity">Cadastro</string>

    <!-- TEXT INPUT LAYOUT NAMES -->
    <string name="til_email">E-mail</string>
    <string name="til_password">Senha</string>
    <string name="til_name">Nome</string>
    <string name="til_repeat_password">Repetir a senha</string>

    <!-- BUTTONS NAMES -->
    <string name="btn_login">ENTRAR</string>
    <string name="btn_register">CADASTRAR</string>

    <!-- TEXT VIEWS NAMES -->
    <string name="tv_or">OR</string>
    <string name="pratos_principais">Pratos principais</string>
    <string name="meal_details">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
</resources>