<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="35dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/logActTilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/logActTietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorInput" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/logActTilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/logActTietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:textColor="@color/colorInput" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/logActBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/colorButtonLogin"
            android:fontFamily="sans-serif-medium"
            android:text="@string/btn_login"
            android:textColor="@color/colorWhite" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/logActTvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tv_or"
                android:textColor="#47525E" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toStartOf="@id/logActTvOr"
                android:layout_toLeftOf="@id/logActTvOr"
                android:background="#C0CCDA" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@id/logActTvOr"
                android:layout_toRightOf="@id/logActTvOr"
                android:background="#C0CCDA" />
        </RelativeLayout>

        <Button
            android:id="@+id/logActBtnRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="110dp"
            android:backgroundTint="@color/colorButtonRegister"
            android:fontFamily="sans-serif-medium"
            android:text="@string/btn_register"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</ScrollView>